--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.chrisphil.charbuilder.MainActivity"
     tools:showIn="@layout/activity_main"
-    android:layout_marginBottom="15dp">
+    android:layout_marginTop="15dp">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
