--- a/app/src/main/res/layout/content_main_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_main_navigation_drawer.xml
@@ -8,4 +8,11 @@
     tools:context="com.chrisphil.charbuilder.MainNavigationDrawer"
     tools:showIn="@layout/app_bar_main_navigation_drawer">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/cardList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorCardBG"
+        />
+
 </android.support.constraint.ConstraintLayout>
