--- a/app/src/main/res/menu/activity_main_navigation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_main_navigation_drawer_drawer.xml
@@ -5,33 +5,33 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/nav_chars"
+            android:icon="@drawable/ic_menu_characterswitch"
+            android:title="Charaktere" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_rulesets"
+            android:icon="@drawable/ic_menu_rulesets"
+            android:title="Regelwerke" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/nav_dice"
+            android:icon="@drawable/ic_menu_dice"
+            android:title="Würfeltool" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Einstellungen" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Speichern">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:id="@+id/nav_import"
+                android:icon="@drawable/ic_menu_import"
+                android:title="Import" />
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:id="@+id/nav_export"
+                android:icon="@drawable/ic_menu_export"
+                android:title="Export" />
         </menu>
     </item>
 
