--- a/app/src/main/res/layout/app_bar_main_navigation_drawer.xml
+++ b/app/src/main/res/layout/app_bar_main_navigation_drawer.xml
@@ -20,6 +20,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main_navigation_drawer" />
+    <!--<include layout="@layout/char_list_view" />-->
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/content_frame"
+        android:layout_marginTop="?attr/actionBarSize"/>
 
 </android.support.design.widget.CoordinatorLayout>
