--- a/app/src/main/res/layout/char_list.xml
+++ b/app/src/main/res/layout/char_list.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.chrisphil.charbuilder.MainActivity"
-    tools:showIn="@layout/activity_main"
     android:layout_marginTop="15dp">
 
     <android.support.v7.widget.CardView
@@ -18,7 +15,7 @@
         android:layout_marginHorizontal="10dp"
         card_view:cardCornerRadius="2dp"
 
-        android:layout_below="@+id/appbar">
+        android:layout_below="@+id/toolbar">
 
         <RelativeLayout
         android:layout_width="match_parent"
@@ -59,4 +56,6 @@
     </android.support.v7.widget.CardView>
 
 
+
     </android.support.constraint.ConstraintLayout>
+
