--- a/app/src/main/res/layout/char_creation.xml
+++ b/app/src/main/res/layout/char_creation.xml
@@ -27,7 +27,15 @@
 
         </android.support.v7.widget.Toolbar>
 
-
+        <android.support.design.widget.TabLayout
+            android:id="@+id/char_tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/toolbar"
+            android:background="?attr/colorPrimary"
+            android:elevation="6dp"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     </android.support.design.widget.AppBarLayout>
 
