--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#005083</color>
     <color name="colorCardBG">#666464</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorBlack">#000000</color>
 </resources>
