--- a/app/src/main/res/layout/char_creation_obligation.xml
+++ b/app/src/main/res/layout/char_creation_obligation.xml
@@ -22,6 +22,7 @@
         android:text="@string/random_obligation_button"
         android:layout_marginTop="3dp" />
     <ListView
+        android:id="@+id/obligation_listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></ListView>
 </LinearLayout>
