--- a/app/src/main/res/layout/char_creation_obligation.xml
+++ b/app/src/main/res/layout/char_creation_obligation.xml
@@ -14,6 +14,15 @@
         android:textColor="@color/colorBlack"
         android:textSize="15dp"
         android:textAlignment="center"/>
+    <TextView
+        android:id="@+id/selected_obligation2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="@string/second_selected_obligation"
+        android:textColor="@color/colorGrey"
+        android:textSize="15dp"
+        android:textAlignment="center"/>
     <Button
         android:id="@+id/random_obligation_button"
         android:layout_width="wrap_content"
