--- a/app/src/main/res/layout/char_creation_species.xml
+++ b/app/src/main/res/layout/char_creation_species.xml
@@ -7,7 +7,9 @@
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/listview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:choiceMode="singleChoice"
+        android:listSelector="@color/listSelectColor"/>
 
 
 </LinearLayout>
