--- a/app/src/main/res/layout/char_creation_motivation.xml
+++ b/app/src/main/res/layout/char_creation_motivation.xml
@@ -38,16 +38,16 @@
         android:fillViewport="true">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
+                    android:layout_gravity="start"
                     android:text="@string/ambition"
                     android:textColor="@color/colorBlack"
                     android:layout_marginTop="2dp"
-                    android:textSize="15dp" />
+                    android:textSize="15sp" />
                 <ListView
                     android:id="@+id/ambition_listView"
                     android:layout_width="match_parent"
@@ -55,11 +55,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
+                    android:layout_gravity="start"
                     android:text="@string/cause"
                     android:textColor="@color/colorBlack"
                     android:layout_marginTop="2dp"
-                    android:textSize="15dp" />
+                    android:textSize="15sp" />
                 <ListView
                     android:id="@+id/cause_listView"
                     android:layout_width="match_parent"
@@ -67,11 +67,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
+                    android:layout_gravity="start"
                     android:text="@string/relationship"
                     android:textColor="@color/colorBlack"
                     android:layout_marginTop="2dp"
-                    android:textSize="15dp" />
+                    android:textSize="15sp" />
                 <ListView
                     android:id="@+id/relationship_listView"
                     android:layout_width="match_parent"
