--- a/app/src/main/res/layout/char_creation_obligation.xml
+++ b/app/src/main/res/layout/char_creation_obligation.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="5dp"
         android:text="@string/selected_obligation"
         android:textColor="@color/colorBlack"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:textAlignment="center"/>
     <TextView
         android:id="@+id/selected_obligation2"
@@ -21,7 +21,7 @@
         android:layout_marginTop="5dp"
         android:text="@string/second_selected_obligation"
         android:textColor="@color/colorGrey"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:textAlignment="center"/>
     <Button
         android:id="@+id/random_obligation_button"
