--- a/app/src/main/res/layout/char_creation_obligation.xml
+++ b/app/src/main/res/layout/char_creation_obligation.xml
@@ -33,5 +33,6 @@
     <ListView
         android:id="@+id/obligation_listView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="?attr/actionBarSize" />
 </LinearLayout>
