--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBlack">#000000</color>
     <color name="colorGrey">#696969</color>
+    <color name="colorLightGrey">#939393</color>
     <color name="listSelectColor">#a6cdf4</color>
 </resources>
