--- a/app/src/main/res/layout/fragment_dice.xml
+++ b/app/src/main/res/layout/fragment_dice.xml
@@ -1,83 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorLightGrey"
+    android:background="@color/colorCardBG"
     android:orientation="vertical">
 
-
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardviewDice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorLightGrey"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:layout_margin="10dp"
+        android:paddingLeft="10dp">
 
-        <ImageButton
-            android:id="@+id/proficiency_button"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="@string/dice_available_title"
+                android:textColor="@color/colorBlack"
+                android:textSize="20sp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+
+                android:padding="5dp">
+
+                <ImageButton
+                    android:id="@+id/proficiency_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorWhite"
+                    android:src="@drawable/dice_proficiency" />
+
+                <ImageButton
+                    android:id="@+id/challenge_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorWhite"
+                    android:src="@drawable/dice_challenge" />
+
+                <ImageButton
+                    android:id="@+id/boost_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorWhite"
+                    android:src="@drawable/dice_boost" />
+
+                <ImageButton
+                    android:id="@+id/difficulty_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorWhite"
+                    android:src="@drawable/dice_difficulty" />
+            </LinearLayout>
+
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="5dp">
+
+                <ImageButton
+                    android:id="@+id/force_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorWhite"
+                    android:src="@drawable/dice_force" />
+
+                <ImageButton
+                    android:id="@+id/setback_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorWhite"
+                    android:src="@drawable/dice_setback" />
+
+                <ImageButton
+                    android:id="@+id/ability_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorWhite"
+                    android:src="@drawable/dice_ability" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardviewSelectedDice"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="5"
+        android:layout_margin="10dp"
+        android:paddingLeft="10dp">
+
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorLightGrey"
-            android:src="@drawable/dice_proficiency"/>
+            android:padding="5dp"
+            android:text="@string/dice_selected_title"
+            android:textColor="@color/colorBlack"
+            android:textSize="20sp" />
 
-        <ImageButton
-            android:id="@+id/challenge_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/colorLightGrey"
-            android:src="@drawable/dice_challenge"/>
-
-        <ImageButton
-            android:id="@+id/boost_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/colorLightGrey"
-            android:src="@drawable/dice_boost"/>
-
-        <ImageButton
-            android:id="@+id/difficulty_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/colorLightGrey"
-            android:src="@drawable/dice_difficulty"/>
-
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorLightGrey"
-        android:orientation="horizontal"
-        android:gravity="center">
-
-        <ImageButton
-            android:id="@+id/force_button"
+        android:layout_width="match_parent"
+        android:orientation="horizontal">
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/colorLightGrey"
-            android:src="@drawable/dice_force"/>
-
-        <ImageButton
-            android:id="@+id/setback_button"
-            android:layout_width="wrap_content"
+            android:text="@string/button_roll_history"
+            android:layout_marginLeft="5dp"/>
+        <Button
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorLightGrey"
-            android:src="@drawable/dice_setback"/>
-
-        <ImageButton
-            android:id="@+id/ability_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/colorLightGrey"
-            android:src="@drawable/dice_ability"/>
-
+            android:text="@string/button_roll_dice"
+            android:layout_marginRight="5dp" />
     </LinearLayout>
-
-
-
-
 
 </LinearLayout>
