--- a/app/src/main/res/layout/fragment_dice.xml
+++ b/app/src/main/res/layout/fragment_dice.xml
@@ -6,6 +6,7 @@
     android:background="@color/colorCardBG"
     android:orientation="vertical">
 
+
     <android.support.v7.widget.CardView
         android:id="@+id/cardviewDice"
         android:layout_width="match_parent"
@@ -37,28 +38,28 @@
                     android:id="@+id/proficiency_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorWhite"
+                    android:background="@null"
                     android:src="@drawable/dice_proficiency" />
 
                 <ImageButton
                     android:id="@+id/challenge_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorWhite"
+                    android:background="@null"
                     android:src="@drawable/dice_challenge" />
 
                 <ImageButton
                     android:id="@+id/boost_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorWhite"
+                    android:background="@null"
                     android:src="@drawable/dice_boost" />
 
                 <ImageButton
                     android:id="@+id/difficulty_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorWhite"
+                    android:background="@null"
                     android:src="@drawable/dice_difficulty" />
             </LinearLayout>
 
@@ -72,21 +73,21 @@
                     android:id="@+id/force_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorWhite"
+                    android:background="@null"
                     android:src="@drawable/dice_force" />
 
                 <ImageButton
                     android:id="@+id/setback_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorWhite"
+                    android:background="@null"
                     android:src="@drawable/dice_setback" />
 
                 <ImageButton
                     android:id="@+id/ability_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorWhite"
+                    android:background="@null"
                     android:src="@drawable/dice_ability" />
 
             </LinearLayout>
@@ -98,34 +99,98 @@
         android:id="@+id/cardviewSelectedDice"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="5"
         android:layout_margin="10dp"
+        android:layout_weight="5"
         android:paddingLeft="10dp">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="@string/dice_selected_title"
-            android:textColor="@color/colorBlack"
-            android:textSize="20sp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="@string/dice_selected_title"
+                android:textColor="@color/colorBlack"
+                android:textSize="20sp" />
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:id="@+id/proficiency_dice_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal" />
+
+                    <LinearLayout
+                        android:id="@+id/challenge_dice_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal" />
+
+                    <LinearLayout
+                        android:id="@+id/boost_dice_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal" />
+
+                    <LinearLayout
+                        android:id="@+id/difficulty_dice_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal" />
+
+                    <LinearLayout
+                        android:id="@+id/force_dice_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal" />
+
+                    <LinearLayout
+                        android:id="@+id/setback_dice_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal" />
+
+                    <LinearLayout
+                        android:id="@+id/ability_dice_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal" />
+                </LinearLayout>
+            </ScrollView>
+        </LinearLayout>
+
 
     </android.support.v7.widget.CardView>
 
     <LinearLayout
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <Button
+            android:id="@+id/roll_history_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/button_roll_history"
-            android:layout_marginLeft="5dp"/>
+            android:layout_marginLeft="5dp"
+            android:text="@string/button_roll_history" />
+
         <Button
+            android:id="@+id/roll_dice_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/button_roll_dice"
-            android:layout_marginRight="5dp" />
+            android:layout_marginRight="5dp"
+            android:text="@string/button_roll_dice" />
     </LinearLayout>
 
 </LinearLayout>
